# geant4-exploration

./: .gitignore  README.md  activate.sh  installation.md
documentation/: concepts_to_explore.md  creating_new_project.md  installation.md  new_project.md
projects/basicsim/: CMakeLists.txt  README.md
projects/basicsim/include/: action.hh  construction.hh  detector.hh  generator.hh  physics.hh
projects/basicsim/src/: action.cc  construction.cc  detector.cc  generator.cc  physics.cc  simulation.cc
projects/myproject/: CMakeLists.txt
projects/myproject/src/: simulation.cc
projects/radioactive-decay/: CMakeLists.txt  README.md
projects/radioactive-decay/include/: PMActionInitialization.hh  PMDetectorConstruction.hh  PMPhysicsList.hh  PMPrimaryGenerator.hh  PMRunAction.hh  PMSensitiveDetector.hh
projects/radioactive-decay/macros/: run.mac
projects/radioactive-decay/src/: PMActionInitialization.cc  PMDetectorConstruction.cc  PMPhysicsList.cc  PMPrimaryGenerator.cc  PMRunAction.cc  PMSensitiveDetector.cc  sim.cc
projects/test1/: CMakeLists.txt
projects/test1/src/: test1.cc
root-tutorials/: README.md  tut1.C  tut2.C
